[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/Workbench-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menu/combat-menu/combat-menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://terminal-theme.tres" type="Theme" id=3]
[ext_resource path="res://menu/navigation-menu/navigation-menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://menu/main-menu/main-menu.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 60
use_filter = true
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
script = ExtResource( 6 )
combat_menu = ExtResource( 2 )
navigation_menu = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.196078, 0.117647, 0.117647, 1 )

[node name="Title" type="Label" parent="."]
margin_left = 50.0
margin_right = 1301.0
margin_bottom = 106.0
custom_colors/font_color = Color( 0.564706, 0.658824, 0.219608, 1 )
custom_fonts/font = SubResource( 1 )
text = "> plasmata"
valign = 2

[node name="ButtonsBox" type="VBoxContainer" parent="."]
margin_left = 65.0
margin_top = 177.0
margin_right = 246.0
margin_bottom = 375.0

[node name="Navigation" type="Button" parent="ButtonsBox"]
margin_right = 181.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
focus_mode = 0
theme = ExtResource( 3 )
enabled_focus_mode = 0
text = "navigation"
align = 0

[node name="Combat" type="Button" parent="ButtonsBox"]
margin_top = 44.0
margin_right = 181.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 40 )
focus_mode = 0
theme = ExtResource( 3 )
enabled_focus_mode = 0
text = "combat"
align = 0

[node name="Quit" type="Button" parent="ButtonsBox"]
margin_top = 88.0
margin_right = 181.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 40 )
focus_mode = 0
theme = ExtResource( 3 )
enabled_focus_mode = 0
text = "quit"
align = 0

[connection signal="pressed" from="ButtonsBox/Navigation" to="." method="_on_Navigation_pressed"]
[connection signal="pressed" from="ButtonsBox/Combat" to="." method="_on_Combat_pressed"]
[connection signal="pressed" from="ButtonsBox/Quit" to="." method="_on_Quit_pressed"]
